<resources>
    <string name="app_name">WIMC-D</string>
    <string name="current_status">Текущий статус:</string>
    <string name="ok">OK</string>
    <string name="planned_drives">Запланированные поездки:</string>
    <string name="arrived">Приехал</string>
    <string name="to_plan_drive">Запланировать поездку</string>
    <string name="from">Откуда</string>
    <string name="to_where">Куда</string>
    <string name="cancel">Отмена</string>
    <string name="log_out">Выйти</string>
    <string name="settings">Настройки</string>

    <string name="departured">Уехал на %1$s</string>
    <string name="departured_prefix">Уехал на </string>
    <string name="planned_drive">В %1$s запланирована поездка из %2$s на %3$s (%4$s)</string>
    <string name="car_number">Номер машины:</string>
    <string name="current_status_text">Текущий статус:</string>
    <string name="changed_at">Изменено в:</string>
    <string name="drive_departured">%1$s: %2$s выехал из %3$s в %4$s</string>
    <string name="drives_history">История поездок</string>
    <string name="add_car">Добавить машину</string>
    <string name="add_driver">Добавить водителя</string>
    <string name="cars_list">Список машин</string>
    <string name="drivers_list">Список водителей</string>
    <string name="admins_list">Список админов</string>
    <string name="drives_list">История поездок</string>
</resources>