<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@id/current_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/current_status_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planned_drives_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/planned_drives"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_status_text" />

    <ListView
        android:id="@+id/planned_drives_listview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ramka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planned_drives_textview"
        tools:listitem="@android:layout/simple_list_item_1" />

    <ListView
        android:id="@+id/destinations_listview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:divider="@color/fui_transparent"
        android:dividerHeight="8dp"
        android:background="@drawable/ramka"
        android:foregroundGravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planned_drives_listview"
        tools:listitem="@android:layout/simple_list_item_1" />

    <Button
        android:id="@+id/arrive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrived"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planned_drives_listview" />

</androidx.constraintlayout.widget.ConstraintLayout>