<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/current_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cars_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="4dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/planned_drives_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_status_text"
        tools:listitem="@android:layout/simple_list_item_1" />

    <TextView
        android:id="@+id/planned_drives_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planned_drives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cars_recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planned_drives_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ramka"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/plan_drive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planned_drives_textview" />

    <Button
        android:id="@+id/plan_drive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_plan_drive"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/admins_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/redwimc_splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/plan_drive_button"
        app:layout_constraintTop_toBottomOf="@id/planned_drives_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>